--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-bitwise": "off",
     "no-plusplus": "off",
     "no-mixed-operators": "off",
+    "no-use-before-define": ["error", {"functions": false}],
     "prefer-template": "warn"
   }
 }
