--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   "rules": {
     "semi": ["error", "never"],
     "indent": ["error", 4],
+    "no-console": "off",
     "no-bitwise": "off",
     "no-plusplus": "off",
     "no-mixed-operators": "off",
