--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "primus": "^6.0.8",
