--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "no-plusplus": "off",
     "no-mixed-operators": "off",
     "no-use-before-define": ["error", {"functions": false}],
+    "no-param-reassign": ["error", {"props": false}],
     "prefer-template": "warn"
   }
 }
