--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "morgan": "^1.7.0",
     "primus": "^6.0.8",
-    "uws": "^0.12.0"
+    "ws": "^1.1.1"
   }
 }
