--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.14.2",
     "morgan": "^1.7.0",
     "primus": "^6.0.8",
+    "primus-emit": "^1.0.0",
+    "randomcolor": "^0.4.4",
     "ws": "^1.1.1"
   }
 }
